--- a/contents/고졸 비전공자 프론트엔드 개발자 취업 후기.md
+++ b/contents/고졸 비전공자 프론트엔드 개발자 취업 후기.md
@@ -1,6 +1,7 @@
 ---
-title: 고졸 비전공자 프론트엔드 개발자 취업 후기
+title: 프론트엔드 개발자 취업 후기
 date: 2021-12-08T13:56:56Z
+excerpt: '검정고시 고졸에 비전공자가 프론트엔드 개발자가 되기 까지'
 ---
 
 올해 11월 드디어 프론트엔드 개발자라는 직업으로 회사에 취직했다. 프리랜서로 일을 오래 하다보니까 회사라는 조직의 구성원으로 뭔가 잘 해낼 수 있을까에 대한 걱정이 있었지만, 입사한 지 이제 3주차에 이르면서 느끼는 것은 `역시 나는 적응은 잘해`정도이다.
