--- a/contents/이터러블 이터레이터 제네레이터.md
+++ b/contents/이터러블 이터레이터 제네레이터.md
@@ -1,6 +1,7 @@
 ---
 title: 이터러블/이터레이터/제네레이터
 date: 2020-06-14T02:04:07Z
+excerpt: '자바스크립트의 이터러블과 이터레이터, 그리고 제네레이터의 동작 방식'
 ---
 
 자바스크립트 공부중 어려웠던 내용을 복습해 보려고 한다. 그 중 하나가 Iterable / Iterator / Generator 였다. 패스트캠퍼스 Nodejs 올인원 패키지에서는 제대로 설명해 주지 않아서 조금 아쉬웠다. 강좌의 분량을 생각하면 어쩔 수 없기도 했지만, 이해하는데 꽤나 시간을 많이 들였다. 물론 지금도 바로 설명하라고 하면 한참을 어버버 거릴 것 같다. 지식의 상태로 있는 내용들을 내것으로 만드는 건 반복 학습 뿐이라고 생각되기 때문에 다시 한 번 정리해 본다.
