--- a/contents/자바스크립트 동등비교연산자 (==).md
+++ b/contents/자바스크립트 동등비교연산자 (==).md
@@ -1,23 +1,24 @@
 ---
 title: 자바스크립트 동등비교연산자 (==)
 date: 2021-08-11T10:36:56Z
+excerpt: '자바스크립트에서 헷갈리는 비교연산의 규칙들'
 ---
 
 자바스크립트에서는 비교연산이 두가지 있다. `==`과 `===` 로 전자는 동등비교연사자, 후자는 일치비교연산자라고 부르기도 한다. (일단 나는 그렇게 부른다.) 대부분의 자바스크립트 개발자들은 두 비교연산자의 차이점은 비교연산시에 동적으로 타이핑을 하느냐로 알고 있을 것이고, 나도 그랬었다. 그렇다면 아래 표현식들의 결과는 어떻게 나올까?
 
 ```js
-[] == true
-null == 0
+[] == true;
+null == 0;
 ```
 
 결론부터 말하자면 둘 다 `false`가 나온다. 우리는 동등 비교연산`==`을 하게되면 양쪽의 피연산자의 값을 형변환을 이용한 뒤 일치연산을 하는 것으로 알고있다. 그렇다면 일반적으로 아래와 같은 방식으로 비교할 것이라고 기대한다.
 
 ```js
-[] == true // []를 boolean으로 형변환 한다
-true == true // true를 반환한다
+[] == true; // []를 boolean으로 형변환 한다
+true == true; // true를 반환한다
 
-null == 0 // null을 0으로 형변환 한다
-0 == 0 // true를 반환한다
+null == 0; // null을 0으로 형변환 한다
+0 == 0; // true를 반환한다
 ```
 
 그런데 왜 둘 다 `false`가 나오는 것일까? 정답은 자바스크립트는 동등 비교 연산시에 ECMAScript에서 지정한 [동등 비교 연산 알고리즘](https://262.ecma-international.org/5.1/#sec-11.9.3)을 통해 형변환을 진행하기 때문이다. 그 중에는 다음과 같은 내용이 있다.
