--- a/contents/프론트엔드 개발자 중간결산.md
+++ b/contents/프론트엔드 개발자 중간결산.md
@@ -10,7 +10,7 @@ excerpt: 주니어 개발자의 8월달 회고
 
 ### 제품에 애정을 갖는 것
 
-이번에 조직개편을 하면서 새삼 놀랐던 것은 내가 만들던 제품에 얼마나 큰 애정이 있었는지 알게 되었다는 것이다. 만약 진정성 없이 그저 개발만 했었다면 동기부여도 잘 되지 않았을거고 사용자에게 어떻게 하면 사용자에게 더 좋은 경험을 줄 수 있을지 이렇게까지 고민해보지 못했을 것 같다. 기술적인 역량은 당연한 것이고 그걸 뛰어넘어 더 좋은 '제품을 만드는 개발자'가 되려면 진정성을 갖고 제품을 사랑하는 것이라는 것도 배울 수 있는 기회였다. 그대로 새롭게 이동한 커리어 크루에서도 잘 해보자!
+이번에 조직개편을 하면서 새삼 놀랐던 것은 내가 만들던 제품에 얼마나 큰 애정이 있었는지 알게 되었다는 것이다. 만약 진정성 없이 그저 개발만 했었다면 동기부여도 잘 되지 않았을거고 사용자에게 어떻게 하면 더 좋은 경험을 줄 수 있을지 이렇게까지 고민해보지 못했을 것 같다. 기술적인 역량은 당연한 것이고 그걸 뛰어넘어 더 '좋은 제품을 만드는 개발자'가 되려면 진정성을 갖고 제품을 사랑하는 것이라는 것도 배울 수 있는 기회였다. 그대로 새롭게 이동한 커리어 크루에서도 잘 해보자!
 
 ### 누군가 짠 코드
 
