--- a/contents/2022년 회고.md
+++ b/contents/2022년 회고.md
@@ -36,6 +36,6 @@ excerpt: '2년차 프론트엔드 개발자가 되는 과정'
 
 ### 코어크루
 
-그리고 1월 16일 부터는 다시 컨텐츠크루, 커리어크루를 지나 코어크루에서 일하게 될 것 같다. 근 일년간은 회사가 투자유치 이후 빠르게 성장하는 단계다 보니 조직구조의 변화가 많이 있었다. 덕분에(?) 다양한 도메인의 제품을 모두 경험할 수 있었고, 그 베이스를 토대로 코어크루에서 리멤버 제품 전체에 적절하게 기여할 수 있지 않을까 기대된다. 사실 나는 제품을 함께 만들어 나가는 것에 큰 만족을 느낀다고 생각했었기 때문에 커리어에 남아있을까 했었는데, 그렇다고 내가 제품 없이 다른 방향성으로 기여하는 방식으로 일해 본 적도 없으니까. 이번에 해보고 판단해볼 생각이다. 그리고 확실히 제품에 대한 바인딩이 없는 작업들이 많을테니까 지금까지와는 다른 방향으로 기술적 고민들이 있지 않을까 기대하는 부분도 있다. 그리고 인프라...! 진짜 인프라쪽도 많이 공부해보고 싶다. 아쉬운 점이라면 지금까지 컨텐츠크루와 커리어크루를 계속 함께 일했던 PO님과의 생이별이 있었다... 일을 함에 있어서도 서로 이해도가 있고 인간적으로도 편한 부분이 있었어서 참 좋은 파트너다 라고 생각했지만 이번 조직개편때는 함께하지 못하게 되었다. 결국 다양한 사람들과 빠르게 적응하는 것도 역량이니까... 서로 홀로서기 해보자고 하며 응원하며 보내줬다(?)
+그리고 1월 16일 부터는 컨텐츠크루, 커리어크루를 지나 코어크루에서 일하게 될 것 같다. 근 일년동안 회사가 투자유치 이후 빠르게 성장해야하는 과정에 있다보니 조직구조의 변화가 많이 있었다. 덕분에(?) 다양한 도메인의 제품을 모두 경험할 수 있었고, 그 베이스를 토대로 코어크루에서 리멤버 제품 전체에 적절하게 기여할 수 있지 않을까 기대된다. 사실 나는 제품을 함께 만들어 나가는 것에 큰 만족을 느낀다고 생각했었기 때문에 커리어에 남아있을까 했었는데, 그렇다고 내가 제품 없이 다른 방향성으로 기여하는 방식으로 일해 본 적도 없으니까. 이번에 해보고 판단해볼 생각이다. 그리고 확실히 제품에 대한 바인딩이 없는 작업들이 많을테니까 지금까지와는 다른 방향으로 기술적 고민들이 있지 않을까 기대하는 부분도 있다. 그리고 인프라...! 진짜 인프라쪽도 많이 공부해보고 싶다. 아쉬운 점이라면 지금까지 컨텐츠크루와 커리어크루를 계속 함께 일했던 PO님과의 생이별이 있었다... 일을 함에 있어서도 서로 이해도가 있고 인간적으로도 편한 부분이 있었어서 참 좋은 파트너다 라고 생각했지만 이번 조직개편때는 함께하지 못하게 되었다. 결국 다양한 사람들과 빠르게 적응하는 것도 역량이니까... 서로 홀로서기 해보자고 하며 응원하며 보내줬다(?)
 
 하나의 회사를 다니면서 이렇게 다양한 경험을 쌓아갈 수 있는 건 진짜 행운이라고 생각한다. 일년 동안 세 번 도메인을 바꿔가면서 일한다? 경험에 목마른 주니어 개발자에겐 최고의 환경 아닐까? 물론 한 도메인에 전문성을 갖는 것도 좋지만 아직은 다양한 방향에 대해서 고민해볼 수 있는 시점에서는 더 많은 인풋을 가져올 수 있는 환경이 좋다고 생각한다. 아무튼 올해는 코어크루에서 폭풍성장 해보자! 파이팅!
