--- a/contents/직관 주도 개발에서 벗어나기.md
+++ b/contents/직관 주도 개발에서 벗어나기.md
@@ -311,12 +311,10 @@ const Calculator = () => {
 
 ### 후기
 
-그간 내가 개발을 하면서 품고있던 생각들을 글로 좀 풀어봤다. 전에 포스팅에서도 언급한 적이 있었지만 개발 이론서들을 좀 멀리하는 경향이 있었는데 그 이유는 '저걸 굳이 다 읽어가면서 알지 않아도 되는 내용'같았기 때문이다. 컴포넌트는 당연히 책임과 한계를 주어서 변경에 유연하게 만들어야 하고, 횡단 관심사의 경우는 Render Props같은 기법을 통해서 의존성을 끌어올려 관리해야 하며 컴포넌트 합성과 같은 기법을 통해서 로직과 UI의 의존성을 강결합하지 않아야 한다는 것들을 굳이 'SOLID 원칙'이나 결국에는 다 의존성을 관리하는 방법들에 대한 내용인 '디자인 패턴'등을... 굳이 알아야 하는지 의문이 있었기 때문이다. 그러니까 그냥 '직관적으로 알 수 있는 것들 아니야?'라는 착각을 꽤 오래 하고있었던 셈이다.
+전에 포스팅에서도 언급한 적이 있었지만 개발 이론서들을 좀 멀리하는 경향이 있었는데 그 이유는 '저걸 굳이 다 읽어가면서 알지 않아도 되는 내용'같았기 때문이다. 컴포넌트는 당연히 책임과 한계를 주어서 변경에 유연하게 만들어야 하고, 횡단 관심사의 경우는 Render Props같은 기법을 통해서 의존성을 끌어올려 관리해야 하며 컴포넌트 합성과 같은 기법을 통해서 로직과 UI의 의존성을 강결합하지 않아야 한다는 것들을 굳이 'SOLID 원칙'이나 결국에는 다 의존성을 관리하는 방법들에 대한 내용인 '디자인 패턴'등을... 굳이 알아야 하는지 의문이 있었기 때문이다. 그러니까 그냥 '직관적으로 알 수 있는 것들 아니야?'라는 착각을 꽤 오래 하고있었던 셈이다.
 
-그래도 모르는 것 보다는 아는 게 낫다고 생각해서 올 해 들어서는 이런 설계 원칙이나 디자인 패턴들에 대해서 개인적으로 많이 알아보고 이해하려고 노력했다. 덕분에 이 글도 완성할 수 있었을 것이고... 아무튼 앞서 했던 오만방자했던 생각들을 많이 고칠 수 있었다. 뭐든 아는만큼 보이는 법이라는 것도 느꼈다.
+그래도 모르는 것 보다는 아는 게 낫다고 생각해서 올 해 들어서는 이런 설계 원칙이나 디자인 패턴들에 대해서 개인적으로 많이 알아보고 이해하려고 노력했다. 덕분에 이 글도 완성할 수 있었을 것이고... 아무튼 앞서 했던 오만방자했던 생각들을 많이 고칠 수 있었다. 얼핏 아는 것과 아는 것은 천지 차이다... 뭐든 아는만큼 보이는 법이라는 것도 느꼈다.
 
-사실 이제는 어떤 '구현'에 있어서는 자신감이 많이 생겼다. '돌아가게 짜는 것'은 솔직히 말해서 진짜 다 할 수 있을 것 같다는 생각을 하기도 했다. (이 오만함도 곧 박살나는 날이 올것이라고 생각한다) 그 다음 단계가 좋은 코드를 짜는 것이다. **좋은 코드란 무엇일까...** 많은 개발자들이 끊임없이 고민하는 명제라고 생각하고 나는 이제 그 영역에 발을 제대로 디뎌야 하는 때가 온 것이다. 그 첫 단계로 나를 아는 것이다. 내가 코드를 짜거나 설계를 할 때에 멘탈모델이 어떻게 동작하는지 알아야 더 개선하거나 보완할 수 있을 것이다. 그 과정을 이 포스팅에 한 달넘게 조금씩 작성하면서 담아봤다.
+사실 이제는 어떤 '구현'에 있어서는 자신감이 많이 생겼다. '돌아가게 짜는 것'은 어렵지 않게 수행할 수 있는데 (이 오만함도 곧 박살나는 날이 오겠지만...) 그 다음 단계가 좋은 코드를 짜는 것이라고 생각한다. **좋은 코드란 무엇일까...** 많은 개발자들이 끊임없이 고민하는 질문이고 나는 이제 그 영역에 발을 제대로 디뎌야 하는 책임이 생긴 연차가 된 것이다. 나름 생각해본 '좋은 코드'를 작성하기 위한 방법으로는, '소프트웨어 다운 코드'를 지향하는게 근사(近似)한 방법이 아닐까 싶다. 소프트웨어 다움을 극대화 하기 위해서는 말 그대로 변경이 쉬워야 한다. 그것이 소프트웨어니까...[고이즈미 짤] 그리고 변경이 쉬운 코드를 만드는 방법으로는 다양한 개발서에서 언급하는 '의존성'과 '복잡도'를 줄이는 것이다. 기존의 원칙과 방법들은 객체지향을 중심으로 설명하는 경우가 많았기 때문에 프론트엔드에서는 이런 것들을 어떻게 소화할 수 있을지 대한 의문도 있었는데, 피상적으로 그런 원칙과 방법들을 이해할려고 하는 것을 넘어서 이런 원칙과 방법들이 어떤 문제들을 어떻게 해결하려고 하는지를 꿰뚫어볼 수 있다면 근본적인 이해가 될 것이고 그 이해를 바탕으로 더 의식적으로 좋은 코드를 작성해보면 분명 좋은 답을 찾을 수 있을거라고 생각한다.
 
-'좋은 코드'를 작성하기 위해서 먼저 '소프트웨어 다운 코드'를 지향하는게 근사(近似)한 방법이 아닐까 싶다. 소프트웨어 다움을 극대화 하기 위해서는 말 그대로 변경이 쉬워야 한다. 그것이 소프트웨어니까...[고이즈미 짤] 그리고 변경이 쉽게 만드는 방법은 다양한 개발서에서 언급하는 '의존성'과 '복잡도'를 줄이는 것이다. 다만 그 '방법'들에 포커스를 두는 게 아니라 이런 방법들이 기존의 문제들을 어떻게 해결하려고 하는지를 꿰뚫어 볼 수 있다면, 조금 더 본질적으로 좋은 코드에 대해서 생각 해 볼 수 있을 것이다.
-
-개인적으로 기존의 원칙과 방법들은 객체지향을 중심으로 설명하는 경우가 많았기 때문에 프론트엔드에서는 이런 것들을 어떻게 소화할 수 있을지 대한 고민도 있었는데 앞에서 말한 것 처럼 결국에 그 방법과 원칙들이 무엇을 설명하려고 하는지를 이해할 수 있다면 그 방법이 가장 중요한 것은 아니라는 깨달음으로 해결할 수 있게된 듯 하다.
+그 첫 단계로 내가 코드를 짜거나 설계를 할 때에 무의식적으로 동작하는 멘탈모델을 파악해야 더 개선하거나 보완할 수 있을 것이다. 그 과정을 이 포스팅에 한 달넘게 조금씩 작성하면서 담아봤다. 생각보다 긴 글이 되었는데 확실히 글을 좀 자주 써야 할 것 같다고 다시 느꼈다...
