doc: 후기 어색한 문장 수정

--- a/contents/직관 주도 개발에서 벗어나기.md
+++ b/contents/직관 주도 개발에서 벗어나기.md
@@ -317,4 +317,4 @@ const Calculator = () => {
 
 사실 이제는 어떤 '구현'에 있어서는 자신감이 많이 생겼다. '돌아가게 짜는 것'은 어렵지 않게 수행할 수 있는데 (이 오만함도 곧 박살나는 날이 오겠지만...) 그 다음 단계가 좋은 코드를 짜는 것이라고 생각한다. **좋은 코드란 무엇일까...** 많은 개발자들이 끊임없이 고민하는 질문이고 나는 이제 그 영역에 발을 제대로 디뎌야 하는 책임이 생긴 연차가 된 것이다. 나름 생각해본 '좋은 코드'를 작성하기 위한 방법으로는, '소프트웨어 다운 코드'를 지향하는게 근사(近似)한 방법이 아닐까 싶다. 소프트웨어 다움을 극대화 하기 위해서는 말 그대로 변경이 쉬워야 한다. 그것이 소프트웨어니까...[고이즈미 짤] 그리고 변경이 쉬운 코드를 만드는 방법으로는 다양한 개발서에서 언급하는 '의존성'과 '복잡도'를 줄이는 것이다. 기존의 원칙과 방법들은 객체지향을 중심으로 설명하는 경우가 많았기 때문에 프론트엔드에서는 이런 것들을 어떻게 소화할 수 있을지 대한 의문도 있었는데, 피상적으로 그런 원칙과 방법들을 이해할려고 하는 것을 넘어서 이런 원칙과 방법들이 어떤 문제들을 어떻게 해결하려고 하는지를 꿰뚫어볼 수 있다면 근본적인 이해가 될 것이고 그 이해를 바탕으로 더 의식적으로 좋은 코드를 작성해보면 분명 좋은 답을 찾을 수 있을거라고 생각한다.
 
-그 첫 단계로 내가 코드를 짜거나 설계를 할 때에 무의식적으로 동작하는 멘탈모델을 파악해야 더 개선하거나 보완할 수 있을 것이다. 그 과정을 이 포스팅에 한 달넘게 조금씩 작성하면서 담아봤다. 생각보다 긴 글이 되었는데 확실히 글을 좀 자주 써야 할 것 같다고 다시 느꼈다...
+그 첫 단계로 내가 코드를 짜거나 설계를 할 때에 무의식적으로 동작하는 멘탈모델을 파악하고 그걸 토대로 더 개선하고 나아질 수 있게 하는 것이다. 그 과정을 이 포스팅에 한 달넘게 조금씩 작성하면서 담아봤다. 생각보다 긴 글이 되었는데 확실히 글을 좀 자주 써야 할 것 같다고 다시 느꼈다...
