--- a/contents/2023년 회고.md
+++ b/contents/2023년 회고.md
@@ -4,11 +4,11 @@ date: 2024-01-01T12:49:52Z
 excerpt: "추진력을 얻기 위함이었다."
 ---
 
-2022년에 이어서 2023년도 개발자로 보냈다. 2023년에는 기술 관련 포스팅을 좀 많이 작성해보려고 했는데 2개 정도 올렸다... 그 중에 하나는 재작년 태스크에 대한 트러블슈팅... 블로그를 많이 남겨야 하는 이유중에는 내가 뭘 했는지 기록을 남기는 용도가 중요한 것 같다. 분명 나름 알찬 한해를 보낸 것 같은데 블로그만 보면 별 거 안한 것 같아 보이고 그러니까 좀 서운(?)하다. 올 해는 전반적으로 뭔가 폭발적인 성장! 10보 전진! 이런 것 보다는 내년의 추진력을 위해 준비하는 한 해가 됐다. 그만큼 평화롭기도 하면서 뭔가 뒤흔들어야 한다는 위기감도 같이 느껴졌는데 나는 뭐든 기대 이상으로 잘 하니까...! (아무튼 믿기)
+2022년에 이어서 2023년도 개발자로 보냈다. 2023년에는 기술 관련 포스팅을 좀 많이 작성해보려고 했는데... 2개 정도 올렸다... 그 중에 하나는 재작년 태스크에 대한 트러블슈팅... 블로그를 많이 남겨야 하는 이유중에는 특히 내가 한 해동안 뭘 했는지 기록을 남기는 용도로서도 굉장히 중요하단 걸 느꼈다. 분명 알찬 한해를 보낸 것 같은데 블로그만 보면 별 거 안한 것 같아 보이고 그러니 좀 서운(?)하다. 올 해는 전반적으로 뭔가 폭발적인 성장! 10보 전진! 같은 것 보다는 내년의 추진력을 위해 준비하는 한 해가 되었는데 그만큼 평화롭기도 하면서 뭔가 뒤흔들어야 한다는 위기감도 같이 느껴졌는다. 하지만 나는 뭐든 기대 이상으로 잘 하니까 너무 걱정말자...! (아무튼 믿기)
 
 ## 개인
 
-먼저 올해 내가 개인적으로 이룬 성장들... 이 쉽게 떠오르지는 않는다. 열심히 회사 생활을 했고 개발적으로도 더 좋은 코드에 대한 막연함을 어느정도 실제로 코드에 반영해 보기도 했지만 어쩐지 아쉬움이 남는 이유가 뭘까 생각 해 보니 이런 것들이 '의식적인 성장'이 부족하지 않았나 싶다. 작년에는 '성장'이란 게 내가 좋은 개발자가 되기 위해서 노력하면 알아서 따라올 것이라고 말했었는데, 스스로 내린 결론에 좀 안일하게 참여했었다. **성장을 위한 성장**은 여전히 경계해야 하지만, 그렇다고 그냥 성장이 알아서 따라오는 건 아닌 것 같다. 내가 어떤 부분에서 성장했는지 아는 것도 성장의 일부다. 올 해는 그런 부분들이 좀 모자라지 않았을까.
+먼저 올해 내가 개인적으로 이룬 성장들... 이 퍼뜩 떠오르지는 않아서 아쉽다. 열심히 회사 생활을 했고 더 좋은 코드에 대한 막연함을 조금씩 실제로 코드에 반영해 보기도 했지만 어쩐지 아쉬움이 남는 이유가 뭘까 생각 해 보니 느껴지는 게 아마 '의식적인 성장'이 부족했기 때문이 아닌가 싶다. 작년에 '성장'이란 게 내가 좋은 개발자가 되기 위해서 노력하면 알아서 따라올 것이라고 말했었는데, 스스로 내린 결론에 좀 안일하게 참여했었다. **성장을 위한 성장**은 여전히 경계해야 하지만, 그렇다고 그냥 성장이 알아서 따라오는 건 아닌 것 같다. 내가 어떤 부분에서 성장했는지 아는 것도 성장의 일부인데 올 해는 그런 부분들이 제대로 못 챙겼을지도 모른다.
 
 #### 독서
 
