fix: 문장 살짝 다듬음

--- a/contents/2023년 회고.md
+++ b/contents/2023년 회고.md
@@ -8,17 +8,17 @@ excerpt: "추진력을 얻기 위함이었다."
 
 ## 개인
 
-먼저 올해 내가 개인적으로 이룬 성장들... 이 퍼뜩 떠오르지는 않아서 아쉽다. 열심히 회사 생활을 했고 더 좋은 코드에 대한 막연함을 조금씩 실제로 코드에 반영해 보기도 했지만 어쩐지 아쉬움이 남는 이유가 뭘까 생각 해 보니 느껴지는 게 아마 '의식적인 성장'이 부족했기 때문이 아닌가 싶다. 작년에 '성장'이란 게 내가 좋은 개발자가 되기 위해서 노력하면 알아서 따라올 것이라고 말했었는데, 스스로 내린 결론에 좀 안일하게 참여했었다. **성장을 위한 성장**은 여전히 경계해야 하지만, 그렇다고 그냥 성장이 알아서 따라오는 건 아닌 것 같다. 내가 어떤 부분에서 성장했는지 아는 것도 성장의 일부인데 올 해는 그런 부분들이 제대로 못 챙겼을지도 모른다.
+먼저 올해 내가 개인적으로 이룬 성장들... 이 퍼뜩 떠오르지는 않아서 아쉽다. 열심히 회사 생활을 했고 더 좋은 코드에 대한 막연함을 조금씩 실제로 코드에 반영해 보기도 했지만 어쩐지 아쉬움이 남는 이유가 뭘까 생각 해 보니 느껴지는 게 아마 '의식적인 성장'이 부족했기 때문이 아닌가 싶다. 작년에 '성장'이란 게 내가 좋은 개발자가 되기 위해서 노력하면 알아서 따라올 것이라고 말했었는데, 스스로 내린 결론에 좀 안일하게 참여했었다. **성장을 위한 성장**은 여전히 경계해야 하지만, 그렇다고 그냥 성장이 알아서 따라오는 건 아닌 것 같다. 내가 어떤 부분에서 성장했는지 아는 것도 성장의 일부인데 올 해는 그런 부분들이 제대로 못 챙겼던 것 같다.
 
 #### 독서
 
-클린 아키텍처를 읽었다. 그동안 막연하게 알고 있으면서 알고 있다고 착각하던 것들을 좀 명료하게 머릿속에 정리할 수 있었다. 흩어져서 얽히는 관심사를 나누는 다양한 방법들에 대한 고민들에 대한 문제들을 좀 더 정확하게 볼 수 있게 된 듯 하다. 물론 1회독에 모든 내용을 이해하지는 못했지만 굉장히 적절한 타이밍에 읽은 것 같다. 만약 좀 더 빨리 읽었다면 분명 이해하지 못한 부분이 더 많았을테고 더 늦게 읽었다면 늦은감이 있었을 것 같다. 마침 내가 고민하고 있는 부분들에 대해서 설명해주고 있었기 때문에 더 효과적으로 읽을 수 있었던 것 같다.
+클린 아키텍처를 읽었다. 그동안 막연하게 알고 있으면서 알고 있다고 착각하던 것들을 좀 명료하게 머릿속에 정리할 수 있었다. 흩어져서 얽히는 관심사를 나누는 다양한 방법들에 대한 고민들을 해소하는 방법들에 대해서 좀 더 정확하게 볼 수 있게 된 듯 하다. 물론 1회독에 모든 내용을 이해하지는 못했지만 굉장히 적절한 타이밍에 읽었다는 생각이다. 만약 좀 더 빨리 읽었다면 분명 이해하지 못한 부분이 더 많았을테고 더 늦게 읽었다면 왜 이걸 이제야...! 했을 것 같다. 마침 내가 고민하고 있는 부분들에 대해서 설명해주고 있었기 때문에 더 효과적으로 읽을 수 있었던 것 같다.
 
-그리고 웹파트에서도 '함께 자라기'라는 책을 읽으면서 북스터디를 했는데 도움되는 내용들이 많았다. 협업을 하면서도 그렇지만 개인적으로도 어떤 태도로 함께 해야하는지, 결국 우리가 함께 잘 해야하는 이유가 무엇인지에 대해서 조금 더 명확하게 알 수 있었다. 또한 읽는 내내 모두가 공감할 수 있었던 부분들이 많았다. 우리가 어떨 때 효율적으로 일하고 어떤 상황에서 건강하게 의사소통 할 수 있는지는 이미 경험으로 막연히 알고 있었고, 그것들을 합리적으로 설명해주는 것 만으로 의식적으로 습득할 수 있게 해주는 점이 좋았다.
+그리고 웹파트 내에서도 '함께 자라기'라는 책을 읽으면서 북스터디를 했는데 역시 도움되는 내용들이 많았다. 협업을 하면서도 그렇지만 개인적으로도 어떤 태도로 함께 해야하는지, 결국 우리가 함께 잘 해야하는 이유가 무엇인지에 대해서 조금 더 명확하게 알 수 있었다. 읽는 동안 파트원들 모두가 공감할 수 있었던 부분들이 많았다. 우리가 어떨 때 효율적으로 일하고 어떤 상황에서 건강하게 의사소통 할 수 있는지는 이미 경험으로 막연히 알고 있었고, 그것들을 합리적으로 설명해주는 것 만으로 의식적인 습득을 할 수 있었고 그런 방법들을 '내 것'으로 만드는 데에 도움이 되었다.
 
 #### 직관
 
-올 해는 '의식적으로 좋은 코드를 작성'하기 위한 고민을 많이했다. (혹은 '의식적으로 나쁜 코드 피하기') 동료 분 중에 한 분이 '정원님은 직관이 좋다'라고 말씀해 주신 적이 있었는데 그 이야기를 처음 들었을 때는 단순하게 '오 내가 직관을 잘 활용하는 구나'라고 생각하고 기분이 좋았는데, 스스로를 곰곰히 생각 해 보니 직관을 잘 활용한다기 보다는 그냥 직관에 의존하면서 코드를 작성하고 있었지 않았나 싶었다. 분명 결과물은 괜찮은 것 같은데 이게 왜 괜찮은지 설명해 보라고 하면 할 수 있을까? 라는 두려움이 생긴 것이다. 그래서 클린 아키텍처를 읽기 시작했다. 지식보다는 경험이 중요한 것은 알고있지만 내 경험을 올바르게 공유하고 더 개선하기 위해서는 경험을 지식으로 정제할 수 있어야 한다. 올 해는 그것에 대한 중요성을 확실하게 느꼈고, 다양한 방법으로 나아지려고 하고 있다. 그 방법 중에 하나로 [직관 주도 개발에서 벗어나기](/2023/직관-주도-개발에서-벗어나기) 포스팅을 작성했다.
+올 해는 '의식적으로 좋은 코드를 작성'하기 위한 고민을 많이했다. (혹은 '의식적으로 나쁜 코드 피하기') 동료 분 중에 한 분이 '정원님은 직관이 좋다'라고 말씀해 주신 적이 있었는데 그 이야기를 처음 들었을 때는 단순하게 '오 내가 직관을 잘 활용하는 구나'라고 생각하고 기분이 좋았는데, 스스로 곰곰히 생각 해 보니 직관을 잘 활용한다기 보다는 그냥 직관에 의존하면서 코드를 작성하고 있었지 않았나 싶었다. 분명 결과물은 괜찮은 것 같은데 이게 왜 괜찮은지 설명해 보라고 하면 할 수 있을까? 라는 두려움이 생긴 것이다. 그래서 클린 아키텍처를 읽기 시작했다. 지식보다는 경험이 중요한 것은 알고있지만 내 경험을 올바르게 공유하고 더 개선하기 위해서는 경험을 지식으로 정제할 수 있어야 한다. 올 해는 그것에 대한 중요성을 확실하게 느꼈고, 다양한 방법으로 나아지려고 하고 있다. 그 방법 중에 하나로 [직관 주도 개발에서 벗어나기](/2023/직관-주도-개발에서-벗어나기) 포스팅을 작성했다.
 
 ## 회사
 
