--- a/contents/직관 주도 개발에서 벗어나기.md
+++ b/contents/직관 주도 개발에서 벗어나기.md
@@ -117,10 +117,7 @@ interface DisplayProps {
   rightElement: ReactNode;
 }
 
-const Display = ({
-  displayNumber,
-  rightElement,
-}: DisplayProps) => {
+const Display = ({ displayNumber, rightElement }: DisplayProps) => {
   return (
     <output>
       {displayNumber}
@@ -161,9 +158,7 @@ export const Buttons = <T,>({
   return (
     <div>
       {buttons.map(({ label, value }) => (
-        <Button onClick={() => onButtonPress(value)}>
-          {label}
-        </Button>
+        <Button onClick={() => onButtonPress(value)}>{label}</Button>
       ))}
     </div>
   );
@@ -217,10 +212,7 @@ const ButtonKeypad = ({
   };
   return (
     <div>
-      <Buttons
-        buttons={BUTTONS}
-        onButtonPress={handleInputValue}
-      />
+      <Buttons buttons={BUTTONS} onButtonPress={handleInputValue} />
     </div>
   );
 };
@@ -277,7 +269,6 @@ export const useController = () => {
 
 ```tsx
 const Calculator = () => {
-  const;
   const { pushDigit, changeOperator, compute, renderDisplay } =
     useController();
 
