fix: 불안한 생각 추가

--- a/contents/3년차 프론트엔드 이직기록.md
+++ b/contents/3년차 프론트엔드 이직기록.md
@@ -8,7 +8,7 @@ excerpt: 검정고시 고졸 개발자가 토스로 이직한 썰 (어그로임)
 
 ### 이유
 
-이직에는 이유가 있어야한다. 나의 경우에는 불안감이었다. 불안은 참으로 어려운 감정이다. 여태까지 나를 성장시킨 원동력이기도 하면서, 늘 내가 올바르지 않은 판단을 할 때의 근본적인 원인이기도 하기 때문이다. 그렇지만 연료로 활용할 가치는 너무나 충분한 감정이라는 것은 부정하지 않는다. 아무튼 나의 불안은 이런 생각에서 시작했다.
+이직에는 이유가 있어야한다. 나의 경우에는 불안감이었다. 불안은 참으로 어려운 감정이다. 여태까지 나를 성장시킨 원동력이기도 하면서, 늘 내가 올바르지 않은 판단을 할 때의 근본적인 원인이기도 하기 때문이다. 그렇지만 연료로 활용할 가치는 너무나 충분한 감정이라는 것은 부정하지 않는다. 그러다가 재직기간을 2년정도 채워 갈 때 문득 '지금 회사에서 정말 10년동안 일해도 좋겠다.'라는 생각이 들었고 나의 불안은 이런 생각에서 시작했다.
 
 불안함이 없어서 생기는 불안이 있었다. 내 삶은 불안의 연속이었다. 검정고시 고졸이라는 저학력에 대한 불안과 한 순간도 경제활동을 하지 않으면 생계유지에 치명적이기 때문에 생기는 금전적인 불안감. 그 것 말고도 인간관계에서도 늘 불안이 따라왔다. 그러다가 안정적인 직장을 얻고, 좋은 사람들을 많이 알게 되면서 삶에서 불안이 많이 걷어낼 수 있었던 것 같다. 어느 순간부터는 안락함 속에서 삶을 유지하는 것에 익숙해지고 있었다. 내가 앞으로 나아갈 이유에 대한 고민은 당연하게 찾아왔다.
 
