fix: 토스 지원동기 추가

--- a/contents/3년차 프론트엔드 이직기록.md
+++ b/contents/3년차 프론트엔드 이직기록.md
@@ -40,7 +40,7 @@ excerpt: 검정고시 고졸 개발자가 토스로 이직한 썰 (어그로임)
 
 ### 이직
 
-그리고 6월달 쯤에 토스에서 Frontend Platform 공개채용을 진행했고 JD를 보니 내가 지금 회사에서 고민하고 공부했던 일들과 겹치는 것들이 많았고 점점 해당 영역에 흥미를 느끼고 있었던 시점이어서 '정말로 큰 기대 없이' 지원을 해보게 되었다. 큰 기대가 없었다는 걸 강조하는 건 진짜로 기대가 없었기 때문에 다시 강조하는 것 이다... 왜냐면 어디든 지원을 할 때 나름 기대 안하려고 하지만 내심 기대하는 게 있기 마련인데 이번에는 진짜 없었고, 전형중에 '시험 전형'이라는 게 있었기 때문에 그냥 내가 지식들을 잘 습득했을까 해서 지원한 것이었다. 시험도 그냥 내가 배운 것 위주로 풀면 되겠다 싶어서 미리 더 공부를 하지도 않았다. 그런데 내가 잘 공부했었는지 면접을 볼 기회를 잡았고 그대로 최종 합격까지 갈 수 있었다.
+그리고 6월달 쯤에 토스에서 Frontend Platform 공개채용을 진행했고 JD를 보니 내가 지금 회사에서 고민하고 공부했던 일들과 겹치는 것들이 많았고 점점 해당 영역에 흥미를 느끼고 있었던 시점이어서 '정말로 큰 기대 없이' 지원을 해보게 되었다. 물론 토스는 너무나 가고싶던 회사 중 하나였고 특히 내가 사용자로서 팬심이 큰 서비스였다. 그런데도 큰 기대가 없었다는 걸 강조하는 건 진짜로 기대가 없었기 때문에 강조했다... 왜냐면 어디든 지원을 할 때 나름 기대 안하려고 하지만 내심 기대하는 게 있기 마련인데 이번에는 진짜 없었고(아마 앞선 실패로 인해), 전형중에 '시험 전형'이라는 게 있었기 때문에 그냥 내가 지식들을 잘 습득했을까 해서 지원한 것이었다. 시험도 그냥 내가 배운 것 위주로 풀면 되겠다 싶어서 미리 더 공부를 하지도 않았다. 그런데 내가 잘 공부했었는지 면접을 볼 기회를 잡았고 그대로 최종 합격까지 갈 수 있었다.
 
 ### 토스의 면접
 
