--- a/contents/3년차 프론트엔드 이직기록.md
+++ b/contents/3년차 프론트엔드 이직기록.md
@@ -50,9 +50,9 @@ excerpt: 검정고시 고졸 개발자가 토스로 이직한 썰 (어그로임)
 
 ### 유종의 미
 
-나는 다니던 회사에 대해서 애정이 여전히 크다. 드라마앤컴퍼니의 구성원들이나 일하는 방식들에서도 배울점이 아직 너무나 많고, 리멤버라는 서비스에도 애정이 많다. 그리고 당연하지만 아직 내가 해볼 수 있는 것들도 아직 많다고 생각한다. 그래도 가장 많은 부분을 차지하는 건 '좋은 동료들'이라는 생각이다. 마지막에 재호님과의 원온원에서도 그 얘기를 하면서 살짝 울먹거리기까지 했을 정도였다.
+나는 다니던 회사에 대해서 애정이 여전히 크다. 드라마앤컴퍼니의 구성원들이나 일하는 방식들에서도 배울점이 아직 너무나 많고, 리멤버라는 서비스에도 애정이 많다. 그리고 당연하지만 아직 내가 해볼 수 있는 것들도 여전히 많다고 생각한다. 그 중에서도 가장 많은 부분을 차지하는 건 '좋은 동료들'이다. 마지막에 재호님과의 원온원에서도 그 얘기를 하면서 살짝 울먹거리기까지 했을 정도였다.
 
-아무튼 그래서 남은 시간동안 최대한 유종의 미를 지키고 싶었다. 인수인계할 수 있는 것들을 문서화하고 같이 일했던 사람들과 원온원을 많이 만들고, 나에게 의지했던 사업팀 사람들도 나의 부재가 크지 않도록 파트원 분들에게 많은 부탁도 드렸다... 너무너무 좋은 사람들과 일할 수 있었다는 생각에 지금 이 글을 쓰면서도 가슴이 벅차오르고 있다... 아무튼 진심임.
+아무튼 그렇기 때문에 남은 시간동안 최대한 유종의 미를 지키고 싶었다. 인수인계할 수 있는 것들을 문서화하고 같이 일했던 사람들과 원온원을 많이 만들고, 나에게 의지했던 사업팀 사람들도 나의 부재가 크지 않도록 파트원 분들에게 많은 부탁도 드렸다... 너무너무 좋은 사람들과 일할 수 있었다는 생각에 지금 이 글을 쓰면서도 가슴이 벅차오르고 있다... 아무튼 진심임.
 
 퇴사하는 날 까지 정시퇴근을 포기하면서 끝까지 많은 사람들과 이야기하고 너무 좋게 마무리 했다. (물론 살짝 아쉬운 것도 있었지만... ^^) 새로운 곳에 가서도 좋은 사람들과 일할 수 있으면 좋겠다. 이런 우려들을 동료들에게 이야기 하면 늘 '정원님이 하기 나름일 거예요'라는 대답을 해줬다. 그게 늘 용기가 되는 것 같다. 토스에서도 사람들과 즐겁게 일할 수 있도록...! 하기 나름을 잘 해보자. 아자아자!
 
